--- a/activator.properties
+++ b/activator.properties
@@ -1,5 +1,5 @@
-name=basic-project
-title=A basic Scala project
-description=Bootstraps a cross-building project.
-tags=seed,scalacheck,scalatest
-authorTwitter=chrslws
+name=world-watch
+title=A pet project
+description=A pet project to practice scala.
+tags=scala
+authorTwitter=taintech
